<resources>
    <string name="app_name">Food App</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address_required">Email address (required)</string>
    <string name="password_required">Password (required)</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_account">Do not have an account?</string>
    <string name="create_a_new_account">Create New Account</string>
    <string name="shop_by_categories">Shop by categories</string>
    <string name="electronics">Electronic</string>
    <string name="clothing">Clothing</string>
    <string name="beauty">Beauty</string>
    <string name="food">Food</string>
    <string name="create_your_account">Create your account</string>
    <string name="required_field">* required field</string>
    <string name="first_name">First name *</string>
    <string name="last_name">Last name *</string>
    <string name="email_address">Email address *</string>
    <string name="password">Password *</string>
    <string name="create_account">Create Account</string>
    <string name="add">Add</string>

    <string name="link">Link</string>
    <string name="recipes">Recipe</string>
    <string name="meal_scheduler">Meal</string>
    <string name="blog">Blog</string>
    <string name="contact">Contact</string>
    <string name="about_me">About Me</string>
    <string name="author">Domenic</string>
    <string name="job">Software Engineer</string>
    <string name="information_details">Information details:\n\nHobbies: traveling, fishing, reading…</string>
    <string name="information">Information</string>
    <string name="title">Title*</string>
    <string name="desc">Description*</string>
    <string name="cancel">Cancel</string>
    <string name="please_input_title">Please input title</string>
    <string name="please_input_desc">Please input description</string>
    <string name="contacts">Contacts</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="linkedin">Linked in</string>
    <string name="github">GitHub</string>
    <string name="new_recipe">New Recipe</string>
    <string name="back">Back</string>
    <string name="blog_name">Blog Name</string>
    <string name="blog_description">Blog description</string>
    <string name="read_more">Read more...</string>
    <string name="eee_mm_dd_yyyy">EEE, MM/DD/YYYY</string>
    <string name="description">Description</string>
    <string name="instruction">Instruction</string>
    <string name="feedback">Feedback</string>
    <string name="ratings">Ratings</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients">Ingredients*</string>
    <string name="name">Name*</string>
    <string name="date">Date*</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="phone">+1(234)567-890</string>
    <string name="new_blog">New Blog</string>
    <string name="breakfast_n_nlunch_n_ndinner">Breakfast: \n\nLunch: \n\nDinner:</string>

</resources>