<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/orange">

    <LinearLayout
            android:id="@+id/vContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/imv"
                android:layout_width="95dp"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:src="@drawable/vietnamese_pho"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/recipe"
                    android:textColor="@color/teal_700"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tvIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/description"/>

            <TextView
                    android:id="@+id/tvInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/instruction"
                    android:textStyle="italic"/>

            <TextView
                    android:id="@+id/tvRatings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/ratings"
                    android:textColor="@color/orange"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tvDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/read_more"
                    android:textColor="@color/teal_200"
                    android:textSize="10sp"
                    android:textStyle="italic" tools:ignore="SmallSp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/vContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/mater_grey_400"
            android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
