<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.dialog.BlogDialog"
        android:background="@color/orange">

    <!-- Title TextView -->
    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/new_blog"
            android:textColor="@color/teal_700"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Blog Name TextView -->
    <TextView
            android:id="@+id/tvBlogName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/blog_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <!-- Blog Name EditText -->
    <EditText
            android:id="@+id/etBlogName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_curved_grey"
            android:inputType="textCapSentences"
            android:minHeight="45dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBlogName"/>

    <!-- Description TextView -->
    <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/blog_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etBlogName"/>

    <!-- Description EditText -->
    <EditText
            android:id="@+id/etDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_curved_grey"
            android:inputType="textCapSentences"
            android:minHeight="45dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"/>

    <!-- Link TextView -->
    <TextView
            android:id="@+id/tvLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDesc"/>

    <!-- Link EditText -->
    <EditText
            android:id="@+id/etLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_curved_grey"
            android:inputType="textCapSentences"
            android:minHeight="45dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLink"/>

    <!-- Button Layout -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLink">

        <!-- Cancel Button -->
        <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/teal_700"
                android:textSize="25sp"/>

        <!-- Add Button -->
        <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textStyle="bold"

                android:layout_marginTop="20dp"
                android:backgroundTint="@color/teal_700"
                android:textSize="25sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
