<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.dialog.RecipeDialog"
        android:background="@color/orange">

    <!-- Title TextView -->
    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/new_recipe"
            android:textColor="@color/teal_700"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Image View -->
    <ImageView
            android:id="@+id/imv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/gallery"
            android:layout_marginTop="30dp"/>

    <!-- Name TextView -->
    <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv"/>

    <!-- Name EditText -->
    <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_curved_grey"
            android:inputType="textCapWords"
            android:minHeight="45dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"/>

    <!-- Instructions TextView -->
    <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/instruction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"/>

    <!-- Instructions EditText -->
    <EditText
            android:id="@+id/etInstructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_curved_grey"
            android:inputType="textCapSentences"
            android:minHeight="45dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInstructions"/>

    <!-- Ratings TextView -->
    <TextView
            android:id="@+id/tvRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/ratings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etInstructions"/>

    <!-- Ratings EditText -->
    <EditText
            android:id="@+id/etRatings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_curved_grey"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="45dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRatings"/>

    <!-- Link TextView -->
    <TextView
            android:id="@+id/tvLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etRatings"/>

    <!-- Link EditText -->
    <EditText
            android:id="@+id/etLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_curved_grey"
            android:inputType="text"
            android:minHeight="45dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLink"
            android:autofillHints=""/>

    <!-- Button Layout -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLink">

        <!-- Cancel Button -->
        <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:backgroundTint="@color/teal_700"
                android:textSize="25sp"/>

        <!-- Add Button -->
        <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:backgroundTint="@color/teal_700"
                android:textSize="25sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>