<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".view.fragment.AboutMeFragment"
        android:background="@color/orange">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <!-- Profile Image -->
            <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imv"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginTop="30dp"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/domenic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/Circular"
                    app:strokeColor="@color/teal_700"
                    app:strokeWidth="5dp" />

            <!-- Gallery Icon -->
            <ImageView
                    android:id="@+id/imvGallery"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toTopOf="@id/imv"
                    app:layout_constraintEnd_toEndOf="@id/imv"
                    android:src="@drawable/gallery" />

            <!-- Author Name TextView -->
            <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/author"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imv" />

            <!-- Job Title TextView -->
            <TextView
                    android:id="@+id/tvJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/job"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

            <!-- Description TextView -->
            <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/information_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvJob" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>
